--- a/Css/Menu.css
+++ b/Css/Menu.css
@@ -12,11 +12,12 @@ header label{
 
 .menu{
     position: absolute;
-    top: 0;
+    top: 50px;
     left: 0;
     width: 100%;
     height: 100vh;
     background: rgba(51,51,51,0.9);
+    transform: translateX(-100%);
 }
 
 .menu a{
@@ -30,4 +31,8 @@ header label{
 
 .menu a:hover{
     background:  rgba(255, 255, 255, 0.5);
+}
+
+#menu-bar:checked ~ .menu{
+    transform: translateX(0%);
 }
